CommandCore restructure and added shouldExecute